# tokei-tui

./: Cargo.toml  README.md
src/: app.rs  main.rs  utils.rs
