[package]
name = "tokei-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokei = "*"
colored = "*"
num-format = "*"
anyhow = "*"
serde = "*"
serde_json = "*"
tui = "*"
crossterm = "*"
ansi-to-tui = "*"
