[package]
name = "tokei-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokei = {git = "https://github.com/XAMPPRocky/tokei"}
colored = "2.0"
num-format = "0.4"
serde = "1.0"
serde_json = "1.0"
tui = "0.19"
crossterm = "0.25"
ansi-to-tui = "2.0"
